chore: revert unnecessary changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/AltimateAI/vscode-dbt-power-user/issues"
   },
-  "version": "0.45.2",
+  "version": "0.45.3",
   "engines": {
     "vscode": "^1.81.0"
   },
@@ -1190,11 +1190,10 @@
     ]
   },
   "scripts": {
-    "generate-dts": "dts-bundle-generator -o out/modules.d.ts src/modules.ts",
     "postinstall": "node postinstall.js",
     "prepare": "husky install",
     "vscode:prepublish": "npm run panel:webviews && npm run panel:lineage && webpack --mode production",
-    "webpack": "webpack --mode development",
+    "webpack": "npm run panel:webviews && npm run panel:lineage && webpack --mode development",
     "webpack-dev": "npm run panel:webviews && npm run panel:lineage && webpack --mode development --watch",
     "watch": "concurrently \"npm:watch --prefix ./new_lineage_panel\" \"npm:watch --prefix ./webview_panels\" \"webpack --mode development --watch\"",
     "test-compile": "tsc -p ./",
@@ -1213,7 +1212,6 @@
     "@types/node": "^20.14.11",
     "@types/vscode": "^1.81.0",
     "@types/which": "^3.0.4",
-    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vscode/test-electron": "^2.4.1",
@@ -1221,8 +1219,6 @@
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "dts-bundle-generator": "^9.5.1",
-    "esbuild-loader": "^4.2.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -1235,7 +1231,6 @@
     "prettier": "^3.3.3",
     "prettier-eslint": "^15.0.1",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "raw-loader": "^4.0.2",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.4",
     "typescript": "^4.9.5",
@@ -1248,18 +1243,9 @@
     "ms-python.python"
   ],
   "dependencies": {
-    "@finos/perspective": "^2.10.0",
-    "@finos/perspective-viewer": "^2.10.0",
-    "@finos/perspective-viewer-d3fc": "^2.10.1",
-    "@finos/perspective-viewer-datagrid": "^2.10.0",
-    "@jupyter-widgets/base": "^4.1.6",
-    "@jupyter-widgets/controls": "^3.1.7",
-    "@jupyter-widgets/jupyterlab-manager": "^3.1.9",
-    "@jupyter-widgets/schema": "^0.5.5",
     "@jupyterlab/coreutils": "^6.2.4",
     "@jupyterlab/nbformat": "^4.2.4",
     "@jupyterlab/services": "^6.6.7",
-    "@lumino/widgets": "^2.4.0",
     "@nteract/messaging": "^7.0.20",
     "@vscode/codicons": "^0.0.36",
     "@vscode/extension-telemetry": "^0.9.6",
@@ -1267,25 +1253,16 @@
     "@vscode/python-extension": "^1.0.5",
     "@vscode/vsce": "^2.31.1",
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "bufferutil": "^4.0.8",
     "dayjs": "^1.11.12",
     "inversify": "^6.0.2",
     "inversify-binding-decorators": "^4.0.0",
     "node-abort-controller": "^3.1.1",
     "node-fetch": "^3.3.2",
     "parse-diff": "^0.11.1",
-    "portfinder": "^1.0.32",
-    "preact": "^10.23.0",
     "python-bridge": "github:mdesmet/node-python-bridge#feat/detached",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "reflect-metadata": "^0.2.2",
-    "requirejs": "2.3",
     "semver": "^7.6.3",
-    "utf-8-validate": "^5.0.10",
-    "vscode-jsonrpc": "^8.2.1",
     "which": "^4.0.0",
-    "ws": "^8.18.0",
     "yaml": "^2.5.0",
     "zeromq": "^6.0.0-beta.16",
     "zeromqold": "npm:zeromq@6.0.0-beta.6"
