--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "sourceMap": true,
     "rootDir": "src",
     "typeRoots": ["./src/lib/main.d.ts"],
+    "paths": {
+      "@extension": ["./src/modules.ts"]
+    },
     "strict": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
